--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ name                     : "김민재"
 description              : "밤공기를 마시며 달리고싶다구요?"
 url                      : "https://ed-moneybrain.github.io" # the base hostname & protocol for your site e.g. "https://ed-moneybrain.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "Ed-moneybrain/ed-moneybrain.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
