--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "김민재"
 description              : "밤공기를 마시며 달리고싶다구요?"
-url                      : "https://ed-moneybrain.github.io" # the base hostname & protocol for your site e.g. "https://ed-moneybrain.github.io"
+url                      : "https://ed-moneybrain.github.io/" # the base hostname & protocol for your site e.g. "https://ed-moneybrain.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "Ed-moneybrain/ed-moneybrain.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
