--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,11 @@ title:                 지옥훈런
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  선선한 바람을 맞으며 뛰고 싶은가?
-  방에만 앉아있는 이 순간 답답함을 느끼는가?
-  당장 집밖으로 나와서 사람들과 함께 뛰어라!
+  "즐겁게 나와서 하루30분 달리는 동아리입니다~!"
 
 # A shorter description for the sidebar.
 tagline:               >
-  "Best way to get over COVID-19 is to run".
+  "즐겁게 나와서 하루30분 달리는 동아리입니다~!".
 
 # A list of keywords for your blog
 keywords:              []
@@ -38,7 +36,7 @@ keywords:              []
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo:                  /assets/icons/icon.png
+logo:                  /assets/icons/pinkshoe.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
@@ -81,8 +79,8 @@ paginate_path:         /page-:num/
 # ========================================================================================
 
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/sidebar-bg.jpg
-accent_color:          rgb(79,177,186)
+accent_image:          /assets/img/running_feet.jpg
+accent_color:          rgb(100,177,186)
 
 # This is used for the `theme-color` meta tag,
 # which changes the background color of the browser UI in certain browsers.
